# Champions

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  alembic.ini  noxfile.py  pipelines.yml  pyproject.toml  requirements.txt  test-output.xml
alembic/: env.py
alembic/versions/: 2022_071412_e5cb97c13914_first_revision.py
app/: config.py  database_config.py  database_definitions.py  db.py  db_conf.py  db_definitions.py  main.py  models.py  requirements.txt  utils.py
app/gql/: inputs.graphql  mutations.graphql  queries.graphql  types.graphql
champions_admin/: .flutter-plugins  .gitignore  pubspec.yaml
champions_admin/example/: pubspec.yaml
champions_admin/example/lib/: constants.dart  main.dart
champions_admin/example/test/: widget_test.dart
champions_admin/lib/: champions_admin.dart
champions_admin/lib/src/: champions_form.dart  create.dart  edit.dart  gql_provider.dart  list.dart  model.dart  router.dart
champions_admin/test/: admin_test.dart
confcom/: parameters.json  policy.json  template.json
junit/: test-results.xml
terraform/: backend.tf  databases.tf  main.tf  resource_group.tf  variables.tf
tests/: conftest.py  test.env  test_main.py
